BRIC-193 cards shelf also view adjustment

--- a/sass/product/vtex.product-summary.scss
+++ b/sass/product/vtex.product-summary.scss
@@ -64,6 +64,9 @@
 .container--summaryComplete
   :global(.vtex-stack-layout-0-x-stackContainer--savingsStack){
     height: 164px;
+    @include breakpoint('desktop'){
+      top: -25px;
+    }
   }
   :global(.vtex-store-components-3-x-installmentsPrice) {
   display: none;
