--- a/sass/home/vtex.rich-text.scss
+++ b/sass/home/vtex.rich-text.scss
@@ -4,7 +4,7 @@
 .container {
   &--home-blog-subtitle {
     @include breakpoint('mobile') {
-      margin-bottom: 4rem;
+      margin-bottom: 3rem;
     }
   }
 
@@ -114,10 +114,11 @@
       font-size: 18px;
       line-height: 1.5rem;
       max-width: 25rem;
-      margin: 30px 0;
+      margin: -30px 0 30px;
       @include breakpoint('mobile') {
-        margin: 0 1rem;
+        margin: -10px 16px 0;
         text-align: center;
+        font-size: 16px;
       }
     }
 
