--- a/sass/home/vtex.rich-text.scss
+++ b/sass/home/vtex.rich-text.scss
@@ -114,13 +114,15 @@
       font-size: 18px;
       line-height: 1.5rem;
       max-width: 25rem;
-      margin: -30px 0 30px;
+      margin: 30px 0;
       @include breakpoint('mobile') {
-        margin: -10px 16px 0;
+        margin: 30px 16px 0;
         text-align: center;
         font-size: 16px;
+
       }
     }
+
 
     &--home-blog-title {
       margin: 1rem 0 0 0.5rem;
@@ -206,5 +208,11 @@
     font-size: 20px;
     margin-left: 16px !important;
     margin-bottom: 30px !important;
+  }
+}
+
+.strong--home-blog-subtitle {
+  @include mobile {
+    font-weight: normal;
   }
 }
