--- a/sass/home/vtex.store-components.scss
+++ b/sass/home/vtex.store-components.scss
@@ -36,7 +36,9 @@
     margin: 0 0 1.25rem;
     max-width: 28.75rem;
     @media screen and (max-width: 768px) {
-      margin-bottom: 4px;
+      margin: 0 16px 4px;
+      max-width: 327px;
+
     }
 
     &:hover {
