--- a/sass/product/vtex.rich-text.scss
+++ b/sass/product/vtex.rich-text.scss
@@ -89,6 +89,7 @@
     font-size: $paragraph-medium-regular;
     font-weight: 300;
     margin: 0;
+    line-height: 1.5;
 
     .strong {
       &--pdp-shipping-info {
