--- a/sass/search/vtex.search-result.scss
+++ b/sass/search/vtex.search-result.scss
@@ -835,19 +835,20 @@
 
 .searchNotFoundOops {
   font-size: 0;
+  display: none;
 }
 
 .searchNotFoundInfo {
   font-size: 0;
   padding: 0 20px;
   &::before {
-    content: 'Ops… siamo spiacenti';
+    content: 'Ops… siamo spiacenti!';
     color: #332c32;
     font-size: 24px;
     font-weight: 500;
     text-align: center;
     margin-bottom: 1rem;
-    margin-left: -5rem;
+    //margin-left: -5rem;
   }
   &::after {
     content: 'Non abbiamo trovato la pagina che cerchi, però possiamo aiutarti a cercare qualcos’altro per te e la tua casa';
