--- a/sass/vtex.store-components.scss
+++ b/sass/vtex.store-components.scss
@@ -1,7 +1,7 @@
 .container {
   width: 100%;
-  max-width: 100%;
-  padding: 0 8px;
+  max-width: 1312px;
+  padding: 0 15px;
   @media screen and (max-width: 48rem) {
     padding: 0;
   }
