--- a/sass/home/vtex.slider-layout.scss
+++ b/sass/home/vtex.slider-layout.scss
@@ -75,12 +75,12 @@
     }
   }
 
-  &--home-blog--visible {
-    @include breakpoint('mobile') {
-      margin-inline: 10px !important;
-      transform: translateX(34px);
-    }
-  }
+  // &--home-blog--visible {
+  //   @include breakpoint('mobile') {
+  //     margin-inline: 10px !important;
+  //     transform: translateX(34px);
+  //   }
+  // }
 
 //   &--homeBottomSectionBrandsMobile {
 //     @include breakpoint('mobile') {
