--- a/sass/header/vtex.flex-layout.scss
+++ b/sass/header/vtex.flex-layout.scss
@@ -96,10 +96,10 @@
 
 .flexRowContent--header-mobile-teste {
   background-color: $white;
-  padding: 0px 10px 0px;
+  padding: 0 10px 0;
 
   &--shrink {
-    padding: 0px 8px 0px;
+    padding: 0 8px 0;
     display: flex;
   }
 }
@@ -120,8 +120,8 @@
 
 .flexCol {
   &--header-small-logo {
-    max-width: 0px;
-    margin: 0px;
+    max-width: 0;
+    margin: 0;
     transition: all 0.3s ease-in-out;
     display: none;
 
@@ -255,7 +255,7 @@
 
   &::before {
     font-size: 14px;
-    content: 'Spese di spedizione calcolate al momento del pagamento!';
+    content: 'Spese di spedizione sempre gratuite!';
   }
 }
 
