--- a/sass/product/vtex.product-summary.scss
+++ b/sass/product/vtex.product-summary.scss
@@ -485,26 +485,28 @@
 }
 
 .element--summarySearch .productBrandContainer {
-  text-align: left;
-}
-
-.element--summarySearch .productBrandContainer .productBrandName {
-  font-size: 14px;
-  color: #0067c7;
-  font-weight: 500;
-  line-height: 20px;
-  margin-bottom: 4px;
+  text-align: center;
 }
 
 .element--summarySearch .nameContainer {
-  padding: 0;
-  justify-content: flex-start;
-}
-
-.element--summarySearch .nameContainer .productBrand {
-  font-size: 12px;
-  line-height: 18px;
-  color: #000;
+  padding: 0.5rem 0;
+  .nameWrapper {
+    color: #4320a8;
+    font-weight: 500;
+    line-height: 20px;
+    margin-bottom: 4px;
+    text-align: center;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+  }
+  .productBrand {
+    font-size: 14px;
+    line-height: 18px;
+    color: #000;
+  }  
 }
 
 /* END - Search Bar Summary */
