--- a/sass/header/vtex.flex-layout.scss
+++ b/sass/header/vtex.flex-layout.scss
@@ -106,6 +106,12 @@
 
 .flexRowContent--minicart-footer {
   background-color: #F4F7FA;
+  .flexColChild {
+    display: block;
+    text-align: center;
+    margin-bottom: 5px;
+    padding: 0 15px;
+  }
 }
 
 .flexRowContent--productInfoNameMinicart {
