--- a/sass/home/vtex.flex-layout.scss
+++ b/sass/home/vtex.flex-layout.scss
@@ -155,11 +155,6 @@
       padding-top: 28px;
     }
     &--home-shelf-02-title{
-      :global(.vtex-rich-text-0-x-container){
-        @include breakpoint('mobile'){
-          justify-content: center;
-        }
-      }
       :global(.vtex-rich-text-0-x-headingLevel2) {
         color: $background-blue-black;
         font-weight: 500;
@@ -297,11 +292,7 @@
     @include mobile {
       font-size: 28px;
       color: #291660;
-    }
-  }
-  :global(.vtex-rich-text-0-x-container) {
-    @include mobile {
-      justify-content: center;
+      padding: 0 15px;
     }
   }
 }
