--- a/sass/search/vtex.search-result.scss
+++ b/sass/search/vtex.search-result.scss
@@ -94,7 +94,7 @@
   }
 
   :global(.vtex-product-summary-2-x-containerNormal--summaryComplete) {
-    max-width: 160px !important;
+    max-width: 100% !important; //160
     margin-bottom: 20px;
     background-color: $white;
     @include mobile {
@@ -103,7 +103,7 @@
     }
 
     :global(.vtex-product-summary-2-x-clearLink--summaryComplete) {
-      max-width: 160px;
+      max-width: 100%; //160
       padding: 5px !important;
 
       :global(.vtex-flex-layout-0-x-flexCol--summaryInfo) {
@@ -448,14 +448,6 @@
     color: #332c32;
   }
 
-  .filter__container {
-    margin-bottom: 1.2rem;
-    order: 4;
-    &--category-3{
-      display: none;
-    }
-  }
-
   .filter__container--selectedFilters,
   .filter__container--clearAllFilters {
     order: 1;
@@ -532,6 +524,11 @@
     height: 20px;
   }
   .filter__container {
+    margin-bottom: 1.2rem;
+    order: 4;
+    &--category-3{
+      display: none;
+    }
     .filterTemplateOverflow {
       max-height: 214px !important;
       scrollbar-width: thin;
