--- a/sass/search/vtex.search-result.scss
+++ b/sass/search/vtex.search-result.scss
@@ -358,10 +358,10 @@
   font-size: 14px;
   font-weight: 500;
 }
-.filterAccordionItemBox--filterMobile--categoria-2, .filter__container--category-2{
+.filter__container--category-2, .filter__container--category-3 {
   position: relative;
   &::after{
-    content:'Sottocategoria';
+    content:'Categoria';
     background-color: #FFF;
     height: 22px;
     min-width: 100px;
@@ -371,12 +371,38 @@
     font-size: 18px;
     line-height: 21px;
     font-weight: 500;
-    color: #332c32;
-    @media screen and (max-width: 768px) {
-      top: 23px;
-    }
   }
 }
+.accordionFilterContainer--filterMobile--category .accordionFilterItemTitle,
+.accordionFilterContainer--filterMobile--subcategory .accordionFilterItemTitle {
+  position: relative;
+  &::after{
+    background-color: #FFF;
+    height: 22px;
+    min-width: 100px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    font-size: 18px;
+    line-height: 21px;
+    font-weight: 500;
+  }
+}
+.accordionFilterContainer--filterMobile--category .accordionFilterItemTitle {
+  &::after{
+    content:'Categoria';
+  }
+}
+.accordionFilterContainer--filterMobile--subcategory .accordionFilterItemTitle {
+  &::after{
+    content:'Sottocategoria';
+  }
+}
+.container--layout--page-category1 .accordionFilterContainer--filterMobile--subcategory, 
+.container--layout--page-category1 .filter__container--category-3{
+  display: none;
+}
+
 .filters--layout {
   padding: 16px;
   padding-top: 0;
@@ -524,7 +550,8 @@
     height: 20px;
   }
   .filter__container {
-    margin-bottom: 1.2rem;
+    margin-bottom: 0.5rem;
+    padding-bottom: 0.5rem;
     order: 4;
     // &--category-3{
     //   display: none;
@@ -573,12 +600,12 @@
 }
 
 @include breakpoint('mobile') {
-  .accordionFilterContainer--filterMobile--categoria-3{
+  /* .accordionFilterContainer--filterMobile--categoria-3{
     display: none;
   }
   .accordionFilterOpen--filterMobile--categoria-3{
     display: none;
-  }
+  } */
   .sidebar {
     min-width: 312px;
 
@@ -646,9 +673,10 @@
       .accordionFilterContainer--filterMobile {
         padding-left: 1rem;
         margin-right: 1rem;
-        &--subcategory{
+
+        /* &--subcategory{
           display: none;
-        }
+        } */
         .accordionFilterItem--filterMobile {
           border-bottom-style: none;
         }
@@ -669,9 +697,10 @@
       .accordionFilterOpen--filterMobile {
         transform: translateX(-3rem);
         padding-bottom: 1rem;
-        &--subcategory, &--categoria-3{
+
+        /* &--subcategory, &--categoria-3{
           display: none;
-        }
+        } */
         .filterAccordionItemBox {
           min-height: 1.5rem;
           border: none;
