--- a/sass/search/vtex.search-result.scss
+++ b/sass/search/vtex.search-result.scss
@@ -361,7 +361,6 @@
 .filter__container--category-2, .filter__container--category-3 {
   position: relative;
   &::after{
-    content:'Categoria';
     background-color: #FFF;
     height: 22px;
     min-width: 100px;
@@ -371,6 +370,16 @@
     font-size: 18px;
     line-height: 21px;
     font-weight: 500;
+  }
+}
+.filter__container--category-2 {
+  &::after{
+    content:'Categoria';
+  }
+}
+.filter__container--category-3 {
+  &::after{
+    content:'Sottocategoria';
   }
 }
 .accordionFilterContainer--filterMobile--category .accordionFilterItemTitle,
