--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -41,9 +41,9 @@ $headline-h4: 1.12rem;
 $paragraph-large-bold: 1rem;
 $paragraph-large-medium: 1rem;
 $paragraph-large-regular: 1rem;
-$paragraph-medium-semibold: 0.88rem;
-$paragraph-medium-medium: 0.88rem;
-$paragraph-medium-regular: 0.88rem;
+$paragraph-medium-semibold: 0.9rem;
+$paragraph-medium-medium: 0.9rem;
+$paragraph-medium-regular: 0.9rem;
 $paragraph-small-bold: 0.75rem;
 $paragraph-small-medium: 0.75rem;
 $paragraph-small-regular: 0.75rem;
@@ -64,3 +64,7 @@ $background-bottom-footer: #17171b;
 $blue-active: #291660;
 $blue-hover: #0b1658;
 $blue-dark-text: #1b0e41;
+$emphasis:#f71963;
+$light: #f4f7fa;
+
+$font-family-text: "Roboto", sans-serif;
