--- a/sass/login/vtex.login.scss
+++ b/sass/login/vtex.login.scss
@@ -55,7 +55,7 @@
                 height: 24px;
                 width: 250px;
                 color: #332C32;
-                font-family: Roboto;
+                font-family: $font-family-text;
                 font-size: 20px;
                 font-weight: 500;
                 letter-spacing: 0;
@@ -89,7 +89,7 @@
                          height: 60px;
                          width: 340px;
                          color: #332C32;
-                         font-family: Roboto;
+                         font-family: $font-family-text;
                          font-size: 16px;
                          letter-spacing: 0;
                          line-height: 20px;
@@ -323,7 +323,7 @@
                 height: 16px;
                 width: 78px;
                 color: #291660;
-                font-family: Roboto;
+                font-family: $font-family-text;
                 font-size: 14px;
                 font-weight: 500;
                 letter-spacing: 0;
