--- a/react/components/CustomMegaMenuNO/style0.css
+++ b/react/components/CustomMegaMenuNO/style0.css
@@ -35,14 +35,27 @@
 
 .container {
   width: 100%;
-  height: 100%;
 }
 
+.menu-department {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  background: #ffffff;
+  justify-content: center;
+  width: 100%;
+  padding: 0;
+}
+
+.menu-header-category {
+  list-style-type: none;
+  width: 90%;
+}
 
 .category-menu-item {
   font-size: 16px;
   font-weight: 400;
-  line-height: 22px;
+  line-height: 30px;
   color: #111;
   text-decoration: none;
   font-family: sans-serif;
@@ -181,6 +194,7 @@
   color: #3453ff;
   background-color: #cc296e14;
 }
+
 .subcategory-item a {
   color: #332C32;
   text-decoration: none;
@@ -206,207 +220,20 @@ text-decoration: underline;
 }
 
 
-
-
-/*aggiunti per il nuovo menu desk*/
-.menu-department {
-  display: flex;
-  flex-direction: column;
-  padding: 0 10px;
-  width: 100%;
-  margin-top: 6px;
-  overflow-y: auto;
-  height: 94%;
+@media (min-width: 768px) and (max-width: 1200px) {
+  /* .submenu-items {
+    padding: 10px 10px 20px;
+  } */
+  /* .megamenu--active {
+    width: 65vw;
+  } */
 }
-
-.menu-header-category {
-  display: flex;
-  align-items: center;
-  list-style-type: none;
-  background-color: #ffffff;
-  justify-content: space-between;
-  transition: background-color 250ms linear;
-  min-width: 100%;
-  height: 50px;
-}
-
-.title-name{
-  color: #332C32;
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 24px;
-  margin: 0;
-  margin-left: 16px;
-  padding: 15px 0 15px;
-}
-
-.menu-icon-container{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 8px;
-}
-
-.menu-header-subcategory {
-  display: flex;
-  align-items: center;
-  list-style-type: none;
-  background-color: #ffffff;
-  min-width: 100%;
-  padding:0.7em 0;
-}
-
-.category-menu-item {
-  text-align: left;
-  white-space: nowrap;
-  overflow: hidden; 
-  padding:0 ;
-}
-
-.link-utili-container{
-  padding: 0;
-}
-
-.menu-header-category svg,
-.menu-header-subcategory svg {
-  top: 6px;
-  left: 22px;
-  overflow: visible;
-}
-
-.category-menu-arrow {
-  height: 15px;
-  width: 15px;
-  transform: translate(3px,1px);
-  background-size: 9px 13px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-image: url("../../../assets/icons/arrowRightMenu.svg");
-}
-.mega-menu {
-  width: 400px!important;
-  padding: 12px 0 24px;
-  top: 0;
-  left: 0;
-  z-index: 2;
-  width: 100%;
-  height: 96%;
-  position: fixed;
-  background-color: #ffffff;
-}
-
-.mega-menu-title-link{
-  padding-bottom: 20px;
-}
-
-.mega-menu-title {
-  font-size: 18px;
-  color: #291660;
-  font-weight: 500;
-  display: flex;
-  align-items: center;
-  margin: 0;
-  padding: 15px 60px 10px 15px;
-}
-.mega-menu-link{
-  font-size: 14px;
-  color: #291660;
-  font-weight: 500;
-  padding: 0 0 0 14px;
-}
-.mega-menu-subtitle {
-  font-size: 16px;
-  color: #111;
-  font-weight: 500;
-  align-items: center;
-  margin: 0;
-  padding: 0px 10px 6px 0px;
-}
-
-.subcategory-item a {
-  color: #332C32;
-  text-decoration: none;
-  font-size: 14px;
-  line-height: 20px;
-  font-weight: 400;
-}
-
-.subcategory-overflow {
-  max-height: 100vh;
-  overflow-y: auto;
-  padding: 0;
-  padding: 15px 60px 10px 15px;
-}
-
-.mega-menu-title:before {
-  content: "";
-  width: 20px;
-  height: 18px;
-  display: inline-block;
-  background-size: 15px;
-  background-image: url("../../../assets/icons/arrowLeftMenu.svg");
-  background-repeat: no-repeat;
-  margin-right: 5px;
-}
-
-.mega-menu-items {
-  padding: 0 15px 20px;
-  max-height: 100vh;
-  margin-top: 0;
-  overflow-y: auto;
-  height: 98%;
-  background-color: #FFF;
-}
-
-.mega-menu-items--item {
-  padding: 12px 0;
-  list-style-type: none;
-}
-
-.mega-menu-items--item-link {
-  font-size: 14px;
-  font-weight: 500;
-  color: #5c5c5c;
-  line-height: 24px;
-  text-decoration: none;
-}
-
-.mega-menu-cta {
-  padding: 12px 0;
-  font-size: 12px;
-  color: #cc296e;
-  font-weight: 600;
-  line-height: 16px;
-  text-decoration: none;
-}
-
-.subcategory-menu-items {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 100%;
-  height: 200vh;
-  background-color: white;
-  z-index: 5;
-  display: flex;
-  flex-direction: column;
-  padding: 12px 0px;
-}
-
-.subcategory-hidden {
-  display: none;
-}
-
-/*fine aggiunta per il nuovo menu desk*/
-
-
 
 @media screen and (max-width: 768px) {
   .container{
     display: flex;
     justify-content: center;
   }
-  
   .mobile-menu-department {
     display: flex;
     flex-direction: column;
@@ -453,16 +280,18 @@ text-decoration: underline;
     border-bottom: 1px solid #D8D8D8;
   }
 
-  .category-menu-item {
+.category-menu-item {
     text-align: left;
     white-space: nowrap;
     overflow: hidden;
-    padding:0;
-    margin: 0.6em 0;
   }
+
 
   .link-utili-container{
     padding: 0;
+  }
+  .category-menu-item{
+    padding:0 ;
   }
 
   .mobile-menu-header-category svg,
@@ -499,7 +328,7 @@ text-decoration: underline;
     display: flex;
     align-items: center;
     margin: 0;
-    padding: 20px 60px 10px 11px;
+    padding: 20px 60px 20px 11px;
   }
   .mobile-mega-menu-link{
     font-size: 14px;
@@ -512,7 +341,7 @@ text-decoration: underline;
     max-height: 100vh;
     overflow-y: auto;
     padding: 0;
-    padding: 11px 11px 70px;
+    padding-bottom: 70px;
   }
 
   .mobile-mega-menu-title:before {
